[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/blank_cell_16.png" type="Texture" id=1]
[ext_resource path="res://scripts/Cell.gd" type="Script" id=2]
[ext_resource path="res://assets/materials/CellShader.material" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Cell" type="Area2D"]
monitoring = false
collision_mask = 0
script = ExtResource( 2 )
alive_color = Color( 0.262745, 0.941176, 0.639216, 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -8, 16, 16 )

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Cell_mouse_entered"]
[connection signal="texture_changed" from="Sprite" to="." method="_on_Sprite_texture_changed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
